Criminal Profile View, Suspect Profile View, Case Profile View, Crime committed date shifted to New Case form; Bugs and error fixes

--- a/public/css/newCaseStyles.css
+++ b/public/css/newCaseStyles.css
@@ -40,3 +40,7 @@ textarea{
 .top-margin{
   margin-top: 5px;
 }
+
+.caseDate{
+  margin-left: 10%;
+}
